<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zareenk94yahoo.mealarooni.meal_plan">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/MealPlanTitle"
        android:id="@+id/MealPlanTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ID_number"
        android:id="@+id/IDNumberTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/MealPlanTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_value"
        android:id="@+id/DateValueTextView"
        android:layout_below="@+id/MealPlanTextView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save to Dashboard"
        android:id="@+id/btnToMealPlan"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:enabled="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/meal1"
        android:id="@+id/Day1TextView"
        android:layout_alignLeft="@+id/MealPlanTextView"
        android:layout_alignStart="@+id/MealPlanTextView"
        android:layout_below="@+id/IDNumberTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/meal2"
        android:id="@+id/Day2TextView"
        android:layout_alignLeft="@+id/Day1TextView"
        android:layout_alignStart="@+id/Day1TextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/meal3"
        android:id="@+id/Day3TextView"
        android:layout_below="@+id/Day2TextView"
        android:layout_alignLeft="@+id/Day2TextView"
        android:layout_alignStart="@+id/Day2TextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/meal4"
        android:id="@+id/Day4TextView"
        android:layout_alignLeft="@+id/Day3TextView"
        android:layout_alignStart="@+id/Day3TextView"
        android:layout_below="@+id/IDNumberTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/meal5"
        android:id="@+id/Day5TextView"
        android:layout_alignLeft="@+id/Day4TextView"
        android:layout_alignStart="@+id/Day4TextView"
        android:layout_below="@+id/IDNumberTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/meal6"
        android:id="@+id/Day6TextView"
        android:layout_below="@+id/Day5TextView"
        android:layout_alignLeft="@+id/Day5TextView"
        android:layout_alignStart="@+id/Day5TextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/meal7"
        android:id="@+id/Day7TextView"
        android:layout_alignLeft="@+id/Day6TextView"
        android:layout_alignStart="@+id/Day6TextView"
        android:layout_below="@+id/IDNumberTextView" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relativeLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MEALS GO HERE"
            android:id="@+id/mealTextView"
            android:layout_marginTop="139dp"
            android:layout_marginLeft="27dp"
            android:layout_marginStart="27dp"
            android:layout_alignTop="@+id/mealsListView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="invisible" />

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mealsListView"
            android:layout_marginTop="37dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</RelativeLayout>
