<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zareenk94.mealarooni.ingredients_list">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/MealPlanTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ID_label"
        android:id="@+id/IDLabelTextView"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/MealPlanTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onButtonClick"
        android:visibility="visible"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ID_number"
        android:id="@+id/IDNumberTextView"
        android:layout_below="@+id/IDLabelTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_label"
        android:id="@+id/DateLabelTextView"
        android:layout_alignTop="@+id/IDLabelTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_value"
        android:id="@+id/DateValueTextView"
        android:layout_below="@+id/DateLabelTextView"
        android:layout_alignLeft="@+id/DateLabelTextView"
        android:layout_alignStart="@+id/DateLabelTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/enter_here"
        android:id="@+id/IngredientsEditText"
        android:layout_below="@+id/IDNumberTextView"
        android:layout_marginTop="45dp"
        android:editable="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:enabled="true"
        android:visibility="visible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add to List"
        android:id="@+id/AddButton"
        android:clickable="true"
        android:layout_below="@+id/IngredientsEditText"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/ListEditText"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/IngredientsEditText"
        android:layout_alignEnd="@+id/IngredientsEditText"
        android:text="@string/list" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back to Meal List"
        android:id="@+id/btnToMealPlan"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Just a note...we are using a yummily api instead of using SQLlite.  Our app requires lots of outside data, so we though using an API will work better for our project.  "
        android:id="@+id/textView"
        android:layout_below="@+id/AddButton"
        android:layout_alignRight="@+id/ListEditText"
        android:layout_alignEnd="@+id/ListEditText" />

</RelativeLayout>
